--- a/package.json
+++ b/package.json
@@ -17,6 +17,16 @@
   },
   "homepage": "https://github.com/chandlerbasso/meteorlanding#readme",
   "dependencies": {
+    "bcrypt": "^0.8.7",
+    "body-parser": "^1.15.2",
+    "ejs": "^2.4.2",
+    "express": "^4.14.0",
+    "express-session": "^1.13.0",
+    "logger": "0.0.1",
+    "method-override": "^2.3.6",
+    "mongodb": "^2.1.18",
+    "morgan": "^1.7.0",
+    "path": "^0.12.7",
     "request": "^2.72.0"
   }
 }
