--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "start": "npm start",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon script.js"
   },
   "repository": {
     "type": "git",
